# torch_xpu

./: pyproject.toml
src/torch_xpu/: __init__.py
