[project]
name = "torch-xpu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "marquesafonso", email = "afonso.cunha.marques@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
torch-xpu = "torch_xpu:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
